eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pantopia-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: "api.pantopia.co.uk"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: pantopia-api-service
            port:
              number: 80
  tls:
  - hosts:
    - "api.pantopia.co.uk"
    secretName: pantopia-api-cert
